# ppt

./: .gitignore  AGENTS.md  README.md  config.yaml.example  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-06-13-ppt-agent-adversarial-plan.md  2026-06-13-ppt-agent-core-plan.md  2026-06-13-ppt-agent-research-plan.md  2026-06-13-ppt-agent-style-learning-plan.md  2026-06-13-ppt-agent-visual-check-plan.md
docs/superpowers/specs/: 2026-06-13-ppt-agent-adversarial-design.md  2026-06-13-ppt-agent-core-design.md  2026-06-13-ppt-agent-research-pipeline.md  2026-06-13-ppt-agent-style-learning-design.md  2026-06-13-ppt-agent-visual-check-design.md
src/ppt_agent/: __init__.py  cli.py  config.py  models.py  orchestrator.py  session.py  tui.py
src/ppt_agent/adversarial/: agents.py  discussion.py  human_ruling.py  models.py
src/ppt_agent/generator/: image_fallback.py  image_gen.py  quality_check.py  shape_renderer.py  slide_generator.py
src/ppt_agent/llm/: anthropic_provider.py  base.py  openai_provider.py  router.py
src/ppt_agent/quality/: checker.py  slide_capture.py  vision_judge.py
src/ppt_agent/research/: chroma_indexer.py  content_extractor.py  wiki.py  (+6 more)
tests/: test_adversarial_models.py  test_chroma_indexer.py  test_config.py  test_content_extractor.py  test_discussion.py  test_image_gen.py  test_knowledge_graph.py  test_llm.py  test_models.py  test_quality_check.py  test_research_models.py  test_session.py  test_shape_renderer.py  test_style.py  test_template_analyzer.py  test_visual_check.py
tests/fixtures/: minimal_template.pptx  sample_article.html
(+3 files in other folders)
