[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.5",
    "python-pptx>=0.6",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "chromadb>=0.4",
    "networkx>=3.0",
    "arxiv>=2.0",
    "trafilatura>=1.6",
    "flask>=3.0",
    "PyGithub>=2.0",
    "sentence-transformers>=2.0",
    "requests>=2.28",
]

[project.scripts]
ppt = "ppt_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
